--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 }
 #home-banner{
     display: flex;
-    margin: 40px 20px 50px;
+    margin: 40px 20px 80px;
     background-image: url(img/top-banner.png);
     background-repeat: no-repeat;
     
@@ -19,6 +19,7 @@ body{
 .about-me h1{
     font-size: 50px;
     font-weight:700;
+    text-transform: uppercase;
    
 }
 .about-me h2{
@@ -54,7 +55,7 @@ body{
 }
 #dream-big{
     display: flex;
-    margin: 40px 20px 50px;
+    margin: 40px 20px 80px;
     background-image: url(img/dream-bg.png);
     background-repeat: no-repeat;
     background-position-X: right;
@@ -63,7 +64,47 @@ body{
 #dream-big .about-me{
     padding-left: 0; 
 }
+
+#Experiences{
+    margin: 40px 20px 80px;
+    background-image: url(img/exp-bg.png);
+    background-repeat: no-repeat;
+    
+  background-position:0px 200px;
+}
 .tird-color{
    color:#ff418c;
 }
-
+.flexible-content{
+    display: flex;
+}
+.centerh1{
+    text-align: center;
+    font-size: 50px;
+    margin-bottom: 45px;
+}
+.boxshadw{
+    width: 50%;
+    padding: 30px;
+    margin-right: 5%;
+    margin-left: 5%;
+    box-shadow: 5px 7px 40px grey;
+    border-radius: 10px;
+    
+}
+.flexible-content :first-child{
+    margin-right: 0%;
+}
+.boxshadw h1{
+    font-size: 35px;
+}
+.tomato{
+    border-left: 7px solid tomato;
+}
+.blue{
+    border-left: 7px solid blue;
+}
+footer p{
+    text-align: center;
+    margin-bottom: 50px;
+}
